# RacingFever

./: build.gradle  gradle.properties  gradlew.bat  settings.gradle
Aseprite/: 119_barela.aseprite  bump_car.aseprite  map_tile.aseprite  martoz.aseprite  minimap_dots.aseprite
Engine2DJava-debug/: Engine2DJava-debug.aar
app/: build.gradle
app/src/androidTest/java/com/lifejourney/racingfever/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Circle.cpp  Circle.h  Engine2D.cpp  Line.cpp  Line.h  Rect.cpp  Rect.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shape.h  ShapeManager.cpp  ShapeManager.h  Size.cpp  Size.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Texture.cpp  Texture.h  Thread.cpp  Thread.h  Utils.cpp  Utils.h  WorkerThread.h
app/src/main/cpp/gamesdk/aar/: aar.aar
app/src/main/cpp/gamesdk/samples/bouncyball/: build.gradle  local.properties
app/src/main/cpp/gamesdk/samples/bouncyball/app/src/main/res/layout/: activity_orbit.xml
app/src/main/cpp/gamesdk/samples/bouncyball/gradle/wrapper/: gradle-wrapper.properties
app/src/main/cpp/glm/glm/gtx/: bit.inl
app/src/main/cpp/glm/test/ext/: ext_scalar_integer.cpp
app/src/main/cpp/glm/test/gtc/: gtc_round.cpp
app/src/main/cpp/soil/src/: SOIL.c  stb_image_aug.c
app/src/main/cpp/soil/src/original/: stb_image-1.09.c  stb_image-1.16.c
app/src/main/java/com/lifejourney/engine2d/: Circle.java  CollidableObject.java  CollidablePool.java  CollisionDetector.java  CollisionPool.java  Engine2D.java  GrayscaleBitmap.java  Line.java  MovableObject.java  Object.java  PathFinder.java  Point.java  PointF.java  QuadTree.java  Rect.java  RectF.java  ResourceManager.java  SATProjection.java  Shape.java  Size.java  Sprite.java  SteeringObject.java  Utils.java  Vector2D.java  View.java  Waypoint.java  World.java
app/src/main/java/com/lifejourney/racingfever/: Camera.java  Car.java  CollidableObject.java  CollisionDetector.java  CollisionPool.java  CoordKey.java  Driver.java  Effect.java  Engine2D.java  GameWorld.java  GrayscaleBitmap.java  InfoBitmap.java  MapData.java  MapView.java  MinimapView.java  MovableObject.java  Object.java  Point.java  PointF.java  Projection.java  RacingFever.java  RacingFeverWorld.java  Rect.java  ResourceManager.java  Shape.java  Size.java  Sprite.java  Track.java  TrackData.java  TrackPathFinder.java  TrackView.java  Vector2D.java  View.java  World.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lifejourney/racingfever/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
